2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/fileheader.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace the third and final usage of vstrextend()
	  in exinclude_display_str()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace the second usage of vstrextend() in
	  proplist_display_str_foreach_fn() using a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/conffile.c: replace one usage of vstrextend() in
	  val_t_display_strs() with a GString

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/amservice.c: use a GString in replacement of vstrextend()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: use a GPtrArray to collect client estimate
	  strings

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: shortcut when no client estimates are to be done
	  - one less indendation level

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: get text-based estimate string generation out of
	  getsize()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: remove variables qname and qdevice

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: push down variables qname and qdevice

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: use the previously create GString all along to
	  append to the request

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: check for the number of estimates available
	  rather than the string concatenation of them

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: push up optionstr() check

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: rework DLE estimate string generation in the non
	  XML case
